src/test/ui/pattern/bindings-after-at/borrowck-pat-by-move-and-ref.stderr
warning: the feature `bindings_after_at` is incomplete and may cause the compiler to crash
  --> $DIR/borrowck-pat-by-move-and-ref.rs:1:12
   |
LL | #![feature(bindings_after_at)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/borrowck-pat-by-move-and-ref.rs:6:34
   |
LL |         ref op_string_ref @ Some(s) => {},
   |         -------------------------^-
   |         |                        |
   |         |                        by-move pattern here
   |         both by-ref and by-move used

error: aborting due to previous error

For more information about this error, try `rustc --explain E0009`.
